// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Features /> renders the <Features /> with just a title 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 caFRqP"
>
  <h1
    class="feature__Title-sc-6swrp6-1 kfqHuI"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Features /> renders the <Features /> with populated data 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 caFRqP"
>
  <h1
    class="feature__Title-sc-6swrp6-1 kfqHuI"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__Subtitle-sc-6swrp6-2 bjYOhA"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
